add cute icons to cv

--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -37,7 +37,7 @@
 %     3rd party packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Needed to divide into several files
-\usepackage{import,ulem}
+\usepackage{import,ulem,svg}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -76,7 +76,7 @@
 \begin{cventries}
   \cventry
     {Ph.D. in Computer Science}
-    {Northeastern University}
+    {\includegraphics[height=0.02\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
     {Boston, MA}
     {Sep 2016 - 2021 (Expected)}
     {
@@ -86,7 +86,7 @@
     }
   \cventry
     {B.B.A. in Management Information Systems}
-    {Beijing University of Posts and Telecommunications}
+    {\includegraphics[height=0.017\textwidth]{../images/logos/bupt.png}~ Beijing University of Posts and Telecommunications}
     {Beijing, China}
     {Sep 2012 - Jul 2016}
     {
@@ -111,12 +111,12 @@
 %    {}
 %\end{cventries}
 
-\addvspace{1ex}
+\addvspace{0.2ex}
 \cvsection{Experience}
 \begin{cventries}
   \cventry
     {Ph.D. ML Intern @ Illicit Trade Team, Dangerous Content}
-    {Facebook}
+    {\includegraphics[height=0.016\textwidth]{../images/logos/facebook.png}~ Facebook}
     {Seattle, WA}
     {Jun 2020 - Sep 2020}
     {
@@ -129,7 +129,7 @@
     }
   \cventry
     {Ph.D. SWE Intern @ Fact Check Team, Google AI}
-    {Google}
+    {\includegraphics[height=0.017\textwidth]{../images/logos/google_ai.png}~ Google}
     {New York, NY}
     {Jun 2019 - Aug 2019}
     {
@@ -143,7 +143,7 @@
     }
   \cventry
     {Research Intern @ AI and Data Science Team}
-    {Dataminr}
+    {\includegraphics[height=0.017\textwidth]{../images/logos/dataminr.png}~ Dataminr}
     {New York, NY}
     {Feb 2019 - Apr 2019}
     {
@@ -157,7 +157,7 @@
     }
   \cventry
     {Research Assistant @ Khoury College of Computer Sciences}
-    {Northeastern University}
+    {\includegraphics[height=0.02\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
     {Boston, MA}
     {Sep 2016 - Present}
     {
@@ -172,7 +172,7 @@
     }
   \cventry
     {Research Assistant @ School of Computing}
-    {National University of Singapore}
+    {\includegraphics[height=0.017\textwidth]{../images/logos/nus.png}~ National University of Singapore}
     {Singapore}
     {Dec 2015 - May 2016}
     {
@@ -183,7 +183,7 @@
     }
   \cventry
     {Research Assistant @ State Key Lab of Networking and Switching Technology}
-    {Beijing University of Posts and Telecommunications}
+    {\includegraphics[height=0.017\textwidth]{../images/logos/bupt.png}~ Beijing University of Posts and Telecommunications}
     {Beijing, China}
     {Oct 2013 - Dec 2015}
     {
@@ -195,7 +195,7 @@
     }
 \end{cventries}
 
-\addvspace{1ex}
+\addvspace{0.2ex}
 \cvsection{Skills}
 \begin{cventries}
  \cvskillnew
