--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -156,7 +156,7 @@
       \end{cvitems}
     }
   \cventry
-    {Research Assistant @ Khoury College of Computer Sciences}
+    {Research and Teaching Assistant @ Khoury College of Computer Sciences}
     {\includegraphics[height=0.02\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
     {Boston, MA}
     {Sep 2016 - Present}
