--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -215,6 +215,16 @@
 \addvspace{0ex}
 \cvsection{Publications}
 \begin{cventries}
+  \cvpubspecialtwo
+    {\href{https://shanjiang.me/publications/facct21_paper.pdf}{Building and Auditing Fair Algorithms: A Case Study in Candidate Screening}}
+    {FAccT'21}
+    {Christo Wilson, Avijit Ghosh, \entrylocationstyle{Shan Jiang}, Alan Mislove, Lewis Baker, Janelle Szary, Kelly Trindel and Frida Polli}
+    {acceptance rate: 25\%}
+  \cvpub
+    {\href{https://shanjiang.me/publications/mac21_paper.pdf}{From Dark to Light: The Many Shades of Sharing Misinformation Online}}
+    {MaC'21}
+    {Miriam Metzger, Andrew Flanagin, Paul Mena, \entrylocationstyle{Shan Jiang} and Christo Wilson}
+    {journal paper}
   \cvpub
     {\href{https://shanjiang.me/publications/icwsm20_paper.pdf}{Modeling and Measuring Expressed (Dis)belief in (Mis)information}}
     {ICWSM'20}
@@ -251,8 +261,8 @@
     {Desheng Hu, \entrylocationstyle{Shan Jiang}, Ronald E Robertson and Christo Wilson}
     {acceptance rate: 18\%}
   \cvpub
-    {\href{https://shanjiang.me/publications/fat19_paper.pdf}{Who's the Guinea Pig? Investigating Online A/B/n Tests in-the-Wild}}
-    {FAT*'19}
+    {\href{https://shanjiang.me/publications/facct19_paper.pdf}{Who's the Guinea Pig? Investigating Online A/B/n Tests in-the-Wild}}
+    {FAccT'19}
     {\entrylocationstyle{Shan Jiang}, John Martin and Christo Wilson}
     {acceptance rate: 24\%}
   \cvpub
@@ -274,7 +284,7 @@
     {\href{https://shanjiang.me/publications/tiis16_paper.pdf}{Conflicts in Overlay Environments: Inefficient Equilibrium and Incentive Mechanism}}
     {KSII-TIIS'16}
     {Jianxin Liao, Jun Gong, \entrylocationstyle{Shan Jiang}, Tonghong Li and Jingyu Wang}
-    {impact factor: 0.61}
+    {journal paper}
   \cvpub
     {\href{https://shanjiang.me/publications/globecom15_paper.pdf}{Interactions of Overlays and Traffic Engineering: Equilibrium and Cooperation without Payment}}
     {GlobeCom'15}
@@ -308,17 +318,9 @@
     {for 1st-year Ph.D. students at Northeastern University}
     {2016}
   \cvaward
-    {Outstanding Undergraduate}
-    {for top undergraduate students in the city of Beijing}
-    {2016}
-  \cvaward
-    {National Scholarship}
+    {National/1st-Class Scholarship}
     {for top 1\% students at Beijing University of Posts and Telecommunications}
-    {2014}
-  \cvaward
-    {First-Class Scholarship $\times$2}
-    {for top 2\% students at Beijing University of Posts and Telecommunications}
-    {2013, 2015}
+    {2013 - 2015}
 \end{cventries}
 
 \addvspace{2ex}
@@ -326,7 +328,7 @@
 \begin{cventries}
   \cvaward
     {Program Committee}
-    {ICWSM, AAAI}
+    {CSCW, ICWSM, AAAI}
     {2021}
  \cvaward
     {}
