--- a/cv/shanjiang-cv-admin.tex
+++ b/cv/shanjiang-cv-admin.tex
@@ -191,7 +191,7 @@
       \end{cvitems}
     }
   \cventry
-    {Research Assistant @ State Key Lab of Networking and Switching Technology}
+    {Research Assistant @ Institute of Network Technology}
     {\includegraphics[height=0.017\textwidth]{../images/logos/bupt.png}~ Beijing University of Posts and Telecommunications}
     {Beijing, China}
     {Oct 2013 - Dec 2015}
