update theme color

--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -22,7 +22,7 @@
 %% Color for highlight
 % Define your custom color if you don't like awesome colors
 %\colorlet{awesome}{awesome-concrete}
-\definecolor{awesome}{HTML}{3C5A99}
+\definecolor{awesome}{HTML}{1877f2}
 %% Colors for text
 %\definecolor{darktext}{HTML}{414141}
 %\definecolor{text}{HTML}{414141}
@@ -76,7 +76,7 @@
 \begin{cventries}
   \cventry
     {Ph.D. in Computer Science}
-    {\includegraphics[height=0.02\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
     {Boston, MA}
     {Sep 2016 - 2021 (Expected)}
     {
@@ -86,7 +86,7 @@
     }
   \cventry
     {B.B.A. in Management Information Systems}
-    {\includegraphics[height=0.017\textwidth]{../images/logos/bupt.png}~ Beijing University of Posts and Telecommunications}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/bupt.png}~ Beijing University of Posts and Telecommunications}
     {Beijing, China}
     {Sep 2012 - Jul 2016}
     {
@@ -116,7 +116,7 @@
 \begin{cventries}
   \cventry
     {Ph.D. ML Intern @ Illicit Trade Team, Dangerous Content}
-    {\includegraphics[height=0.016\textwidth]{../images/logos/facebook.png}~ Facebook}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/facebook.png}~ Facebook}
     {Seattle, WA}
     {Jun 2020 - Sep 2020}
     {
@@ -124,12 +124,12 @@
         \item {Project: Weak supervision and multitask learning for detecting illicit trade content.}
         \item {Implemented weak supervision on multimodal models for illicit trade (e.g., prostitution, firearms, drugs) detection by utilizing existing labels and pre-trained models of auxiliary tasks (e.g., user reporting, nudity classifier) for multitask learning.}
         \item {Proposed and tested generalizable hypotheses on selecting and ordering auxiliary tasks for weakly supervising models in other problem areas, and shared experiments and results across Facebook's machine learning teams.}
-        \item {Improved the performance of production models by up to \entrylocationstyle{2\%} and \entrylocationstyle{productionized} 5K+ lines of code.}
+        \item {\entrylocationstyle{Productionized} 5K+ lines of code and improved the performance of production models by up to \entrylocationstyle{2\%}.}
       \end{cvitems}
     }
   \cventry
     {Ph.D. SWE Intern @ Fact Check Team, Google AI}
-    {\includegraphics[height=0.017\textwidth]{../images/logos/google_ai.png}~ Google}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/google.png}~ Google}
     {New York, NY}
     {Jun 2019 - Aug 2019}
     {
@@ -143,7 +143,7 @@
     }
   \cventry
     {Research Intern @ AI and Data Science Team}
-    {\includegraphics[height=0.017\textwidth]{../images/logos/dataminr.png}~ Dataminr}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/dataminr.png}~ Dataminr}
     {New York, NY}
     {Feb 2019 - Apr 2019}
     {
@@ -157,7 +157,7 @@
     }
   \cventry
     {Research and Teaching Assistant @ Khoury College of Computer Sciences}
-    {\includegraphics[height=0.02\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
     {Boston, MA}
     {Sep 2016 - Present}
     {
@@ -167,12 +167,12 @@
         \item {Collected and analyzed TB-sized social media and search engine data under the Spark/Hadoop framework.}
         \item {Applied statistical (e.g., regression) and causal (e.g., propensity score matching) models for hypothesis testing.}
         \item {Leveraged empirical observations to build natural language processing and machine learning pipelines to identify misinformation and linguistic bias in human-generated content (e.g., news, comments), particularly under algorithmic curation (e.g., ranking, personalization).}
-        \item {Published \entrylocationstyle{award-winning} papers at top web (e.g., \entrylocationstyle{WWW'18-19}, \entrylocationstyle{ICWSM'19-20}), HCI (e.g., \entrylocationstyle{CSCW'18}) and AI (e.g., \entrylocationstyle{AAAI'20}, \entrylocationstyle{FAT*'19}) conferences.}
+        \item {\entrylocationstyle{Award-winning} publications at top web (e.g., \entrylocationstyle{WWW'18/19}, \entrylocationstyle{ICWSM'19/20}), HCI (e.g., \entrylocationstyle{CSCW'18}) and AI (e.g., \entrylocationstyle{AAAI'20}, \entrylocationstyle{FAccT'19/21}) conferences.}
       \end{cvitems}
     }
   \cventry
     {Research Assistant @ School of Computing}
-    {\includegraphics[height=0.017\textwidth]{../images/logos/nus.png}~ National University of Singapore}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/nus.png}~ National University of Singapore}
     {Singapore}
     {Dec 2015 - May 2016}
     {
@@ -183,7 +183,7 @@
     }
   \cventry
     {Research Assistant @ Institute of Network Technology}
-    {\includegraphics[height=0.017\textwidth]{../images/logos/bupt.png}~ Beijing University of Posts and Telecommunications}
+    {\includegraphics[width=0.016\textwidth]{../images/logos/bupt.png}~ Beijing University of Posts and Telecommunications}
     {Beijing, China}
     {Oct 2013 - Dec 2015}
     {
@@ -328,7 +328,7 @@
 \begin{cventries}
   \cvaward
     {Program Committee}
-    {CSCW, ICWSM, AAAI}
+    {AAAI, ICWSM, WebSci}
     {2021}
  \cvaward
     {}
@@ -340,7 +340,7 @@
     {2019}
   \cvaward
     {Reviewer}
-    {CHI, CSCW, ICWSM, AAAI}
+    {AAAI, CSCW, ICWSM, WebSci}
     {2021}
   \cvaward
     {}
