--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -124,7 +124,7 @@
         \item {Project: Weak supervision and multitask learning for detecting illicit trade content.}
         \item {Implemented weak supervision on multimodal models for illicit trade (e.g., prostitution, firearms, drugs) detection by utilizing existing labels and pre-trained models of auxiliary tasks (e.g., user reporting, nudity classifier) for multitask learning.}
         \item {Proposed and tested generalizable hypotheses on selecting and ordering auxiliary tasks for weakly supervising models in other problem areas, and shared experiments and results across Facebook's machine learning teams.}
-        \item {\entrylocationstyle{Productionized} 5K+ lines of code and improved the performance of production models by up to \entrylocationstyle{2\%}.}
+        \item {Integrated 5K+ lines of code \entrylocationstyle{in production} and improved precision@recall=90\% of production models by up to \entrylocationstyle{10\%}.}
       \end{cvitems}
     }
   \cventry
@@ -137,8 +137,7 @@
         \item {Project: ClaimReview markup (e.g., claim, claimant and verdict) extraction from fact-check articles.}
         %\item {Hosts: Simon Baumgartner, Abe Ittycheriah and Cong Yu.}
         \item {Explored several task formulation possibilities, e.g., language generation under encoder-decoder frameworks, and eventually formulated the task as a sequence tagging problem and conducted several experiments by modifying and fine-tuning BERT models.}
-        \item {\entrylocationstyle{Productionized} 5K+ lines of code with test files and technical documentation.}
-        \item {Published a paper with additional data exploration and model comparison at \entrylocationstyle{WWW'20}.}
+        \item {Integrated 5K+ lines of code \entrylocationstyle{in production} with test files and technical documentation and published a paper at \entrylocationstyle{WWW'20}.}
       \end{cvitems}
     }
   \cventry
@@ -148,10 +147,10 @@
     {Feb 2019 - Apr 2019}
     {
       \begin{cvitems}
-        \item {Project: Crisis sub-event (e.g., burning road after a wildfire) detection on social media for emergency management.}
+        \item {Project: Crisis sub-event (e.g., road burning after a wildfire) identification on social media for emergency management.}
         %\item {Hosts: William Groves, Sam Anzaroot and Alejandro Jaimes.}
-        \item {Built a pipeline model that first scans the Twitter firehose and parses Tweets to dependency trees, then traverses to extract connected noun-verb pairs (e.g., home-burn, house-destroy), and finally clusters similar pairs as sub-events.}
-        \item {Case-studied California wildfires to understand the temporal cascading (e.g., fire$\to$smoke$\to$pollution) of sub-event networks.}
+        \item {Built a pipeline model that first scans Twitter and parses each Tweet to a dependency tree, then traverses it to extract connected noun-verb pairs (e.g., home-burn, house-destroy), and finally clusters similar pairs as sub-events.}
+        \item {Case-studied recorded California wildfires to understand the temporal cascading (e.g., fire$\to$smoke$\to$pollution) of sub-event networks.}
         \item {Published a paper at the AI for social good workshop, i.e., \entrylocationstyle{AISG'19}@ICML.}
       \end{cvitems}
     }
@@ -162,12 +161,12 @@
     {Sep 2016 - Present}
     {
       \begin{cvitems}
-        \item {Research areas: computational journalism, computational social science, algorithm auditing, information quality.}
+        \item {Research areas: computational social science, algorithm auditing, misinformation, fact-checking, etc.}
         %\item {Collaborators: Christo Wilson, Alan Mislove, Ronald E Robertson, Miriam Metzger (UC Santa Barbara), Kenneth Joseph (U Buffalo), etc.}
-        \item {Collected and analyzed TB-sized social media and search engine data under the Spark/Hadoop framework.}
-        \item {Applied statistical (e.g., regression) and causal (e.g., propensity score matching) models for hypothesis testing.}
+        \item {Collected and analyzed TB-sized social media and news data with the Spark/Hadoop framework.}
+        \item {Applied statistical (e.g., regression) and causal (e.g., propensity scoring) models for hypothesis testings.}
         \item {Leveraged empirical observations to build natural language processing and machine learning pipelines to identify misinformation and linguistic bias in human-generated content (e.g., news, comments), particularly under algorithmic curation (e.g., ranking, personalization).}
-        \item {\entrylocationstyle{Award-winning} publications at top web (e.g., \entrylocationstyle{WWW'18/19}, \entrylocationstyle{ICWSM'19/20}), HCI (e.g., \entrylocationstyle{CSCW'18}) and AI (e.g., \entrylocationstyle{AAAI'20}, \entrylocationstyle{FAccT'19/21}) conferences.}
+        \item {Published \entrylocationstyle{award-winning} papers at social computing (e.g., \entrylocationstyle{WWW'18/19}, \entrylocationstyle{ICWSM'19/20}, \entrylocationstyle{CSCW'18}) and AI (e.g., \entrylocationstyle{AAAI'20}, \entrylocationstyle{FAccT'19/21}) venues.}
       \end{cvitems}
     }
   \cventry
@@ -177,7 +176,7 @@
     {Dec 2015 - May 2016}
     {
       \begin{cvitems}
-        \item {Project: Economic modeling of Bitcoin mining under risk aversion assumptions.}
+        \item {Project: Economic modeling of mining cryptocurrency (e.g., Bitcoin) behaviors under assumptions of risk aversion.}
         %\item {Collaborator: Richard TB Ma.}
       \end{cvitems}
     }
@@ -188,9 +187,9 @@
     {Oct 2013 - Dec 2015}
     {
       \begin{cvitems}
-        \item {Project: Game-theoretic modeling of overlay networks and traffic engineering.}
+        \item {Project: Game-theoretic modeling of the competition and cooperation between overlay networks and traffic engineering.}
         %\item {Collaborators: Jingyu Wang and Jun Gong.}
-        \item {Published papers at computer network and system conferences, e.g., \entrylocationstyle{GlobeCom'15}, \entrylocationstyle{LCN'15}, \entrylocationstyle{ICPADS'14}.}
+        \item {Published papers at computer networks (e.g., \entrylocationstyle{GlobeCom'15}, \entrylocationstyle{LCN'15}) and systems (e.g., \entrylocationstyle{ICPADS'14}) venues.}
       \end{cvitems}
     }
 \end{cventries}
