--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -7,7 +7,7 @@
 %%% Themes: Awesome-CV
 \documentclass[letterpaper]{awesome-cv}
 \hypersetup{pdfinfo={
-  Title={Shan Jiang: CV},
+  Title={CV | Shan Jiang},
   Author={Shan Jiang}
 }}
 %%% Override a directory location for fonts(default: 'fonts/')
