update acl paper

--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -166,7 +166,7 @@
         \item {Collected and analyzed TB-sized social media and news data with the Spark/Hadoop framework.}
         \item {Applied statistical (e.g., regression) and causal (e.g., propensity scoring) models for hypothesis testings.}
         \item {Leveraged empirical observations to build natural language processing and machine learning pipelines to identify misinformation and linguistic bias in human-generated content (e.g., news, comments), particularly under algorithmic curation (e.g., ranking, personalization).}
-        \item {Published \entrylocationstyle{award-winning} papers at social computing (e.g., \entrylocationstyle{WWW'18/19}, \entrylocationstyle{ICWSM'19/20}, \entrylocationstyle{CSCW'18}) and AI (e.g., \entrylocationstyle{AAAI'20}, \entrylocationstyle{FAccT'19/21}) venues.}
+        \item {Published \entrylocationstyle{award-winning} research papers at top conferences for natural language processing (e.g., \entrylocationstyle{ACL'21}), computational social science (e.g., \entrylocationstyle{WWW'18/19}, \entrylocationstyle{ICWSM'19/20}), HCI (e.g., \entrylocationstyle{CSCW'18}) and AI (e.g., \entrylocationstyle{AAAI'20}, \entrylocationstyle{FAccT'19/21}).}
       \end{cvitems}
     }
   \cventry
@@ -189,7 +189,7 @@
       \begin{cvitems}
         \item {Project: Game-theoretic modeling of the competition and cooperation between overlay networks and traffic engineering.}
         %\item {Collaborators: Jingyu Wang and Jun Gong.}
-        \item {Published papers at computer networks (e.g., \entrylocationstyle{GlobeCom'15}, \entrylocationstyle{LCN'15}) and systems (e.g., \entrylocationstyle{ICPADS'14}) venues.}
+        \item {Published research papers at conferences for networks (e.g., \entrylocationstyle{GlobeCom'15}, \entrylocationstyle{LCN'15}) and systems (e.g., \entrylocationstyle{ICPADS'14}).}
       \end{cvitems}
     }
 \end{cventries}
@@ -208,12 +208,17 @@
     {Transformers/BERT, Seq2Seq, RNN/LSTM, Attention, Rationalization, Interpretability, Explainability}
   \cvskillnew
     {Statistics}
-    {Hypothesis Testing, Regression Analysis, Causal Inference}
+    {Hypothesis Testing, Linear Models, Causal Inference}
 \end{cventries}
 
 \addvspace{0ex}
 \cvsection{Publications}
 \begin{cventries}
+  \cvpub
+    {\href{https://shanjiang.me/publications/acl21_paper.pdf}{Structurizing Misinformation Stories via Rationalizing Fact-Checks}}
+    {ACL'21}
+    {\entrylocationstyle{Shan Jiang} and Christo Wilson}
+    {acceptance rate: TBA}
   \cvpubspecialtwo
     {\href{https://shanjiang.me/publications/facct21_paper.pdf}{Building and Auditing Fair Algorithms: A Case Study in Candidate Screening}}
     {FAccT'21}
@@ -326,19 +331,7 @@
 \cvsection{Service}
 \begin{cventries}
   \cvaward
-    {Program Committee}
-    {AAAI, ICWSM, WebSci}
-    {2021}
- \cvaward
-    {}
-    {ICWSM, WebSci}
-    {2020}
- \cvaward
-    {}
-    {ASONAM (Multidisciplinary Track)}
-    {2019}
-  \cvaward
-    {Reviewer}
+    {Program Committee \& Reviewer}
     {AAAI, CSCW, ICWSM, WebSci}
     {2021}
   \cvaward
@@ -347,7 +340,7 @@
     {2020}
   \cvaward
     {}
-    {CHI, CSCW, ICWSM}
+    {ASONAM, CHI, CSCW, ICWSM}
     {2019}
   \cvaward
     {}
