--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -218,7 +218,7 @@
     {\href{https://shanjiang.me/publications/acl21_paper.pdf}{Structurizing Misinformation Stories via Rationalizing Fact-Checks}}
     {ACL'21}
     {\entrylocationstyle{Shan Jiang} and Christo Wilson}
-    {acceptance rate: TBA}
+    {acceptance rate: 21\%}
   \cvpubspecialtwo
     {\href{https://shanjiang.me/publications/facct21_paper.pdf}{Building and Auditing Fair Algorithms: A Case Study in Candidate Screening}}
     {FAccT'21}
