update resource page

--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -332,7 +332,7 @@
 \begin{cventries}
   \cvaward
     {Program Committee \& Reviewer}
-    {AAAI, CSCW, ICWSM, WebSci}
+    {AAAI, CSCW, ICWSM, NeurIPS, WebSci}
     {2021}
   \cvaward
     {}
