--- a/cv/shanjiang-cv.tex
+++ b/cv/shanjiang-cv.tex
@@ -78,7 +78,7 @@
     {Ph.D. in Computer Science}
     {\includegraphics[width=0.016\textwidth]{../images/logos/northeastern.png}~ Northeastern University}
     {Boston, MA}
-    {Sep 2016 - 2021 (Expected)}
+    {Sep 2016 - Jul 2021}
     {
       \begin{cvitems}
         \item {Advisor: Christo Wilson}
